@@ -74,7 +74,10 @@ typedef int errno_t;
 
 #define offsetof(s, m) __builtin_offsetof (s, m)
 
+void __builtin_unreachable(void);
 #if __STDC_VERSION__ > 201112L // TODO: Replace by >= to exact value from final version of C2X standard.
+#define unreachable __builtin_unreachable
+
 typedef typeof(nullptr) nullptr_t;
 #endif
 
